--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 MAILER_USERNAME = 
 MAILER_PASSWORD =
 DOMAIN =  rottomate.herokuapp.com
+PUBLISHABLE_KEY=pk_test_1IhMrmpclETKfDEuW9nKo6DF
+SECRET_KEY=sk_test_bwmGoMcHqoh2hRJIOwq7QYtp
+
+
